erased console log

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -46,11 +46,11 @@
   height: 190px;
   background-image: linear-gradient(
     to right bottom,
-    #6b69fd,
+    #fd6969,
     #428ec2,
     #58f6d4,
-    #50f193,
-    #48ec63
+    #dabd17,
+    #3c2a67
   ); /*linear-gradient(to right bottom, #fd8369, #fc7870, #f96e78, #f56581, #ee5d8a)*/
   background-repeat: no-repeat;
   background-position: center;
